fixed btn-white dark mode theme

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -12,22 +12,22 @@ body:not(.theme-dark) .hide-theme-light {
 
 @include dark-mode {
   & {
-    --#{$prefix}body-color: #{$dark-mode-text};
-    --#{$prefix}body-color-rgb: #{to-rgb($dark-mode-text)};
+    --#{$prefix}body-color:         #{$dark-mode-text};
+    --#{$prefix}body-color-rgb:     #{to-rgb($dark-mode-text)};
 
-    --#{$prefix}body-bg: #{$dark-mode-darken};
-    --#{$prefix}body-bg-rgb: #{to-rgb($dark-mode-darken)};
+    --#{$prefix}body-bg:            #{$dark-mode-darken};
+    --#{$prefix}body-bg-rgb:        #{to-rgb($dark-mode-darken)};
 
-    --#{$prefix}card-bg: #{$dark};
-    --#{$prefix}card-bg-rgb: #{to-rgb($dark)};
+    --#{$prefix}card-bg:            #{$dark};
+    --#{$prefix}card-bg-rgb:        #{to-rgb($dark)};
 
-    --#{$prefix}border-color: #{$dark-mode-border-color};
+    --#{$prefix}border-color:       #{$dark-mode-border-color};
     --#{$prefix}border-color-light: #{$dark-mode-border-color-light};
 
-    --#{$prefix}btn-color: #{$dark};
+    --#{$prefix}btn-color:          #{$dark};
 
-    color: $dark-mode-text;
-    background-color: $dark-mode-darken;
+    color:                          $dark-mode-text;
+    background-color:               $dark-mode-darken;
   }
 
   .page {
@@ -39,7 +39,7 @@ body:not(.theme-dark) .hide-theme-light {
   }
 
   .text-body {
-    color: $dark-mode-text!important;
+    color: $dark-mode-text !important;
   }
 
   .card,
@@ -53,7 +53,7 @@ body:not(.theme-dark) .hide-theme-light {
   .toast-header,
   .alert:not(.alert-important) {
     background-color: $dark;
-    color: inherit;
+    color:            inherit;
   }
 
   .bg-light {
@@ -66,23 +66,25 @@ body:not(.theme-dark) .hide-theme-light {
 
   .card-tabs .nav-tabs .nav-link {
     background-color: $dark-mode-darken;
-    color: inherit;
+    color:            inherit;
   }
 
   pre {
     background-color: $dark-mode-darken;
-    border-color: $dark-mode-border-color;
+    border-color:     $dark-mode-border-color;
   }
 
   .card-tabs .nav-tabs .nav-link.active {
     background-color: $dark;
-    color: inherit;
+    color:            inherit;
   }
 
   .btn-white,
   .form-file-button {
     //@include button-variant($dark-mode-lighten, $border-color, $dark-mode-text, rgba($dark, 0), $border-color, $dark-mode-text);
     background-image: none;
+    background-color: $dark-mode-darken !important;
+    color:            $dark-mode-text !important;
   }
 
   .form-check-input:not(:checked),
@@ -93,8 +95,8 @@ body:not(.theme-dark) .hide-theme-light {
   .form-selectgroup-check,
   .form-imagecheck-figure:before {
     background-color: $dark-mode-darken;
-    color: $dark-mode-text;
-    border-color: $dark-mode-border-color;
+    color:            $dark-mode-text;
+    border-color:     $dark-mode-border-color;
   }
 
   .form-control-plaintext {
@@ -122,7 +124,7 @@ body:not(.theme-dark) .hide-theme-light {
   }
 
   .markdown,
-  .markdown>*,
+  .markdown > *,
   .accordion-button {
     color: inherit;
   }
@@ -146,11 +148,11 @@ body:not(.theme-dark) .hide-theme-light {
 
   .apexcharts-tooltip {
     background: $dark !important;
-    border: 1px solid $dark-mode-border-color !important;
+    border:     1px solid $dark-mode-border-color !important;
     box-shadow: 2px 2px 6px -4px $dark-mode-darken !important;
 
     .apexcharts-tooltip-title {
-      background: $dark !important;
+      background:    $dark !important;
       border-bottom: 1px solid $dark-mode-border-color !important;
     }
   }
